# PHYS2320_Autograder

./: LICENSE  README.md  env.yaml  setup.cfg  setup.py
.github/workflows/: build_conda.yaml
phys2320_assessment/: __init__.py  cohort.py  exceptions.py  funcs.py
phys2320_assessor/: __init__.py  assessor.py  cohort.py  exceptions.py  filer.py  funcs.py  result.py  zip.py
recipe/: meta.yaml
