[metadata]
# replace with your username:
name = phys230_assessor
author = Gavin Burnell
author_email = g.burnell@leeds.ac.uk
description = A tool for assessing Leeds physics student python coursework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uolphysicsteaching/PHYS2320_Autograder
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 3 clause License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .